--- a/css/main.css
+++ b/css/main.css
@@ -163,6 +163,10 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+body.modal-open {
+  overflow: hidden;
+}
+
 ul {
   margin: 0px;
   padding: 0px;
@@ -278,57 +282,121 @@ button {
 
 /* Навигация сайта*/
 .header {
-  border-bottom: 1px solid #ECECEC;
   position: relative;
+  border-bottom: 1px solid #ECECEC;
 }
 
-.container-header {
+.navigation {
   display: flex;
-  position: relative;
   align-items: center;
+  justify-content: space-between;
 }
 
 .logo {
-  display: block;
+  display: inline-flex;
+  padding: 0;
   color: #2195f3;
   font-family: Raleway;
   font-style: normal;
   font-weight: 700;
-  font-size: 24px;
-  line-height: 1.16;
-  letter-spacing: 0.03em;
-}
-
-@media screen and (min-width: 1200px) {
-  .logo {
-    font-size: 26px;
-    line-height: 1.19;
-  }
+  font-size: 26px;
 }
 
 .logo > .black {
   color: #212121;
 }
 
-.navigation {
-  display: flex;
-  align-items: center;
+/*Меню мобильного*/
+.menu-button {
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
 }
 
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
+}
+
+.menu-button:hover {
+  fill: #2195f3;
+}
+
+.menu-button .icon-cross {
+  display: none;
+}
+
+.menu-button.is-open .icon-cross {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
+.menu-container {
+  width: 100%;
+  text-align: center;
+}
+
+@media screen and (max-width: 767px) {
+  .menu-container {
+    display: none;
+    padding: 60px 20px;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    border-top: 1px solid #ececec;
+  }
+  .menu-container.is-open {
+    display: block;
+    background-color: #ffffff;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .menu-container {
+    display: flex;
+    text-align: left;
+  }
+}
+
+/* Ссилки навигации*/
 .navigation-list {
   display: flex;
   align-items: center;
 }
 
-.navigation-item + .navigation-item,
-.auth-item + .auth-item {
-  margin-left: 50px;
+@media screen and (max-width: 767px) {
+  .navigation-list {
+    flex-direction: column;
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .navigation-list {
+    margin-left: 88px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .navigation-item:not(:last-child) {
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .navigation-item:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 
 .navigation-list .link {
   display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
   color: #212121;
   font-size: 14px;
   font-weight: 500;
@@ -339,6 +407,21 @@ button {
 
 .navigation-list .link:hover, .navigation-list .link:focus {
   color: #2195f3;
+}
+
+@media screen and (max-width: 767px) {
+  .navigation-list .link {
+    padding-bottom: 8px;
+    font-size: 16px;
+    font-weight: 500;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .navigation-list .link {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 }
 
 .navigation-list .current {
@@ -357,67 +440,86 @@ button {
   border-radius: 2px;
 }
 
-.auth-list {
-  margin-left: auto;
-  display: flex;
-  align-items: center;
+.nav-contact-list {
+  display: block;
 }
 
-.auth-item .link {
-  display: flex;
+@media screen and (min-width: 768px) {
+  .nav-contact-list {
+    display: flex;
+    flex-direction: column;
+    margin-left: auto;
+    padding-top: 21px;
+    padding-bottom: 21px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .nav-contact-list {
+    flex-direction: inherit;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .nav-contact-item:first-child {
+    margin-bottom: 16px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .nav-contact-item:first-child {
+    margin-bottom: 6px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .nav-contact-item:first-child {
+    margin-right: 30px;
+  }
+}
+
+.nav-contact-item .link {
+  display: block;
   align-items: center;
   color: #757575;
   font-style: normal;
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 500;
-  line-height: 1.17;
+  line-height: 1.16;
   text-decoration: none;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.auth-item .link:hover, .auth-item .link:focus {
+.nav-contact-item .link:hover, .nav-contact-item .link:focus {
   color: #2195f3;
 }
 
-.icon-nav {
-  display: block;
+.nav-contact-item .link .nav-contact-icon {
+  display: inline-block;
   padding: 0;
   margin-right: 10px;
   fill: currentColor;
 }
 
-.menu-button {
-  display: inline-flex;
-  margin: 0;
-  padding: 0;
-  border: none;
-  background-color: transparent;
+@media screen and (max-width: 767px) {
+  .nav-contact-item .link {
+    padding-bottom: 16px;
+  }
 }
 
-.menu-button .icon-cross {
-  display: none;
+@media screen and (min-width: 768px) {
+  .nav-contact-item .link {
+    font-size: 12px;
+    line-height: 1.17;
+  }
 }
 
-.menu-button.is-open .icon-cross {
-  display: block;
-}
-
-.menu-button.is-open .icon-menu {
-  display: none;
-}
-
-.mobile-menu {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  background-color: yellowgreen;
-  padding: 60px 140px;
-}
-
-.mobile-menu.is-open {
-  display: block;
+@media screen and (min-width: 1200px) {
+  .nav-contact-item .link {
+    font-size: 14px;
+    line-height: 1.17;
+  }
 }
 
 /* Главная часть, Герой*/
@@ -963,14 +1065,19 @@ button {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
   height: 100%;
-  padding: 93px 15px;
+  padding: 40px 15px;
   background-color: rgba(0, 0, 0, 0.2);
-  z-index: 2;
+  z-index: 10;
   overflow-y: scroll;
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 480px) {
+  .backdrop {
+    width: 100%;
+  }
 }
 
 .backdrop.is-hidden {
@@ -979,7 +1086,9 @@ button {
 }
 
 .modal {
-  padding: 20px;
+  position: relative;
+  width: 100%;
+  padding: 40px 20px;
   box-sizing: border-box;
   background-color: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -990,11 +1099,17 @@ button {
 @media screen and (min-width: 480px) {
   .modal {
     position: absolute;
-    width: 450px;
-    padding: 20px;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%) scale(1);
+    transform: translate(-50%, -50%);
+    width: 450px;
+    padding: 40px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
   }
 }
 
@@ -1002,18 +1117,25 @@ button {
   transform: translate(-50%, -50%) scale(0.9);
 }
 
-.form-modal {
-  display: inline-block;
-}
-
 .modal-title {
-  display: block;
+  display: inline-block;
   margin-bottom: 12px;
   font-weight: 700;
   font-size: 20px;
   line-height: 1.5;
   text-align: center;
+  letter-spacing: 0.03em;
   color: #212121;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-title {
+    line-height: 1.15;
+  }
+}
+
+.form-modal {
+  width: 100%;
 }
 
 .block-input {
@@ -1044,11 +1166,6 @@ button {
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input:focus-within {
-  border: 1px solid #2196F3;
-  border-radius: 4px;
-}
-
 .input-icons {
   position: absolute;
   bottom: 21px;
@@ -1056,11 +1173,16 @@ button {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.form-input:focus-within {
+  border: 1px solid #2196F3;
+  border-radius: 4px;
+}
+
 .form-input:focus-within + .input-icons {
   fill: #2195f3;
 }
 
-.comment {
+.form-modal textarea {
   width: 100%;
   height: 120px;
   resize: none;
@@ -1073,7 +1195,7 @@ button {
   cursor: pointer;
 }
 
-.comment::placeholder {
+.form-modal textarea::placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.16;
@@ -1081,19 +1203,27 @@ button {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.comment:focus-within {
+.form-modal textarea:focus-within {
   border: 1px solid #2196F3;
   border-radius: 4px;
 }
 
 .agreement {
   display: block;
+  align-items: center;
   margin-bottom: 30px;
   font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.61;
   letter-spacing: 0.03em;
   color: #757575;
+}
+
+@media screen and (min-width: 1200px) {
+  .agreement {
+    font-size: 14px;
+    line-height: 2;
+  }
 }
 
 .terms-agreement {
@@ -1134,7 +1264,7 @@ button {
   font-size: 16px;
   line-height: 1.875;
   letter-spacing: 0.06em;
-  color: #ffffff;
+  color: #fff;
   background-color: #2195f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
