--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -7,6 +7,10 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+body.modal-open {
+    overflow: hidden;
+}
+
 ul {
     margin: 0px;
     padding: 0px;
