--- a/sass/studio/_header.scss
+++ b/sass/studio/_header.scss
@@ -1,54 +1,114 @@
 /* Навигация сайта*/
 .header {
-    border-bottom: 1px solid #ECECEC;
     position: relative;
+    border-bottom: 1px solid #ECECEC;
 }
 
-.container-header {
+.navigation {
     display: flex;
-    position: relative;
     align-items: center;
+    justify-content: space-between;
 }
 
 .logo {
-    display: block;
+    display: inline-flex;
+    padding: 0;
     color: $accent-color;
     font-family: Raleway;
     font-style: normal;
     font-weight: 700;
-    font-size: 24px;
-    line-height: 1.16;
-    letter-spacing: 0.03em;
-
-    @media screen and (min-width: 1200px){
-        font-size: 26px;
-        line-height: 1.19;
-    }
+    font-size: 26px;
 }
 
 .logo>.black {
     color: $title-color;
 }
 
-.navigation {
-    display: flex;
-    align-items: center;
-}
-.navigation-list {
-    display: flex;
-    align-items: center;
-    // margin-left: 93px;
+/*Меню мобильного*/
+.menu-button {
+    display: inline-flex;
+    margin: 0;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+
+    @media screen and (min-width: 768px) {
+        display: none;
+    }
+
+    &:hover {
+        fill: $accent-color;
+    }
 }
 
-.navigation-item+.navigation-item,
-.auth-item+.auth-item {
-    margin-left: 50px;
+.menu-button .icon-cross {
+    display: none;
+}
+
+.menu-button.is-open .icon-cross{
+    display: block;
+}
+
+.menu-button.is-open .icon-menu{
+    display: none;
+}
+
+.menu-container {
+    width: 100%;
+    text-align: center;
+    
+
+    @media screen and (max-width: 767px) {
+        display: none;
+        padding: 60px 20px;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        border-top: 1px solid #ececec;
+
+        &.is-open {
+            display: block;
+            background-color: $title-color-white;
+        }
+    }
+
+    @media screen and (min-width: 768px) {
+        display: flex;
+        text-align: left;
+    }
+}
+
+/* Ссилки навигации*/
+.navigation-list {
+    display: flex;  
+    align-items: center;
+
+    @media screen and (max-width: 767px) {
+        flex-direction: column;
+        margin-bottom: 60px;
+    }
+
+    @media screen and (min-width: 768px) {
+        margin-left: 88px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .navigation-item:not(:last-child) {
+        margin-bottom: 40px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .navigation-item:not(:last-child) {
+        margin-right: 50px;
+    }
 }
 
 .navigation-list .link {
     display: block;
-    padding-top: 32px;
-    padding-bottom: 32px;
+    
+    
     color: $title-color;
     font-size: 14px;
     font-weight: 500;
@@ -58,88 +118,123 @@
 
     &:hover,
     &:focus {
-    color: $accent-color;
-}
+        color: $accent-color;
+    }
+
+    @media screen and (max-width: 767px) {
+        padding-bottom: 8px;
+        font-size: 16px;
+        font-weight: 500;
+        
+    }
+
+    @media screen and (min-width: 768px){
+        padding-top: 32px;
+        padding-bottom: 32px;
+    }
 }
 
 .navigation-list .current {
     color: $accent-color;
     position: relative;
-    
+
     &::after {
-    content: '';
-    position: absolute;
-    bottom: 0%;
-    left: 0;
-    width: 100%;
-    height: 4px;
-    background-color: $accent-color;
-    border-radius: 2px;
+        content: '';
+        position: absolute;
+        bottom: 0%;
+        left: 0;
+        width: 100%;
+        height: 4px;
+        background-color: $accent-color;
+        border-radius: 2px;
     }
 }
 
-.auth-list {
-    margin-left: auto;
-    display: flex;
-    align-items: center;
+.nav-contact-list {
+    
+    display: block;
+
+    @media screen and (min-width: 768px) {
+        display: flex;
+        flex-direction: column;
+        margin-left: auto;
+        padding-top: 21px;
+        padding-bottom: 21px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        flex-direction: inherit;
+        align-items: center;
+    }
 }
 
-.auth-item .link {
-    display: flex;
+.nav-contact-item {
+    
+    @media screen and (max-width: 767px) {
+        &:first-child {
+            margin-bottom: 16px;
+        }
+    }
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+        &:first-child {
+            margin-bottom: 6px;
+        }
+    }
+    
+    @media screen and (min-width: 1200px) {
+        &:first-child {
+            margin-right: 30px;
+        }
+    }
+   
+}
+
+.nav-contact-item .link {
+    display: block;
     align-items: center;
     color: $primary-text-color;
 
     font-style: normal;
-    font-size: 14px;
+    font-size: 18px;
     font-weight: 500;
-    line-height: 1.17;
+    line-height: 1.16;
     text-decoration: none;
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
-    color: $accent-color;
+        color: $accent-color;
     }
-}
 
-.icon-nav {
-    display: block;
+    & .nav-contact-icon {
+    display: inline-block;
     padding: 0;
     margin-right: 10px;
     fill: currentColor;
-}
+    }
 
-.menu-button {
-    display: inline-flex;
-    margin: 0;
-    padding: 0;
-    border: none;
-    background-color: transparent;
-}
+    @media screen and (max-width: 767px) {
+        padding-bottom: 16px;
+    }
 
-.menu-button .icon-cross{
-    display: none;
-}
-
-.menu-button.is-open .icon-cross {
-    display: block;
-}
-
-.menu-button.is-open .icon-menu {
-    display: none;
-}
-
-.mobile-menu {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    background-color: yellowgreen;
-    padding: 60px 140px;
-
-    &.is-open{
-        display: block;
+    @media screen and (min-width: 768px) {
+        font-size: 12px;
+        line-height: 1.17;
+    }
+    
+    @media screen and (min-width: 1200px) {
+         font-size: 14px;
+         line-height: 1.17;
     }
 }
+
+// .nav-contact-item:not(:last-child) {
+//             @media screen and (min-width: 768px)
+//             {margin-bottom: 10px;}
+//         }
+// .navigation-item+.navigation-item,
+// .nav-contact-item+.nav-contact-item {
+//     margin-left: 50px;
+// }
