--- a/sass/studio/_modal-form.scss
+++ b/sass/studio/_modal-form.scss
@@ -1,21 +1,21 @@
 /* Модальное окно */
 .backdrop {
-    
-
     position: fixed;
     top: 0;
-    left: 0;
-    width: 100%;
+    left: 0;   
     height: 100%;
-    padding: 93px 15px;
+    padding: 40px 15px;
     background-color: rgba(0, 0, 0, 0.2);
-    z-index: 2;
+    z-index: 10;
     overflow-y: scroll;
 
     opacity: 1;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    
+    @media screen and (min-width: 480px) {
+        width: 100%;
+    }
+
 }
 
 .backdrop.is-hidden {
@@ -24,9 +24,11 @@
 }
 
 .modal {
-    padding: 20px;
+    position: relative;
+    width: 100%;
+    padding: 40px 20px;
     box-sizing: border-box;
-    
+   
     background-color: $title-color-white;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
         0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -35,34 +37,45 @@
 
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    @media screen and (min-width: 480px){
+    @media screen and (min-width: 480px) {
         position: absolute;
-        width: 450px;
-
-        padding: 20px;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%) scale(1.0); 
+        transform: translate(-50%, -50%);
+        width: 450px;
+        padding: 40px;
     }
+
+    @media screen and (min-width: 1200px) {
+        width: 528px;
+    }
+
+
 }
 
 .backdrop.is-hidden .modal {
     transform: translate(-50%, -50%) scale(0.9);
 }
 
-.form-modal {
-    display: inline-block;
-}
-
 
 .modal-title {
-    display: block;
+    display: inline-block;
     margin-bottom: 12px;
+
     font-weight: 700;
     font-size: 20px;
     line-height: 1.5;
     text-align: center;
-    color: #212121;
+    letter-spacing: 0.03em;
+    color: $title-color;
+
+    @media screen and (min-width: 1200px) {
+        line-height: 1.15;
+    }
+}
+
+.form-modal {
+    width: 100%;
 }
 
 .block-input {
@@ -96,11 +109,6 @@
     cursor: pointer;
 
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:focus-within {
-        border: 1px solid #2196F3;
-        border-radius: 4px;
-    }
 }
 
 .input-icons {
@@ -109,13 +117,18 @@
     left: 12px;
 
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    .form-input:focus-within+& {
-    fill: $accent-color;
-    }
 }
 
-.comment {
+.form-input:focus-within {
+    border: 1px solid #2196F3;
+    border-radius: 4px;
+}
+
+.form-input:focus-within+.input-icons {
+    fill: $accent-color;
+}
+
+.form-modal textarea {
     width: 100%;
     height: 120px;
     resize: none;
@@ -127,29 +140,35 @@
     border-radius: 4px;
     outline: none;
     cursor: pointer;
+}
 
-    &::placeholder {
-        font-weight: 400;
-        font-size: 12px;
-        line-height: 1.16;
-        letter-spacing: 0.01em;
-        color: rgba(117, 117, 117, 0.5);
-    }
+.form-modal textarea::placeholder {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+}
 
-    &:focus-within {
+.form-modal textarea:focus-within {
     border: 1px solid #2196F3;
     border-radius: 4px;
-    }
 }
 
 .agreement {
     display: block;
+    align-items: center;
     margin-bottom: 30px;
     font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
+    font-size: 12px;
+    line-height: 1.61;
     letter-spacing: 0.03em;
-    color: $primary-text-color;
+    color: #757575;
+
+    @media screen and (min-width: 1200px) {
+        font-size: 14px;
+        line-height: 2;
+    }
 }
 
 .terms-agreement {
@@ -168,15 +187,15 @@
 
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
 
-    .agreement-checkbox:checked+& {
-        border-color: $accent-color;
-        background-color: $accent-color;
-        background-image: url(./../image/icon-check.svg);
-        background-size: contain;
-        background-position: center;
-        background-origin: border-box;
-    }
+.agreement-checkbox:checked+.icon-checkbox {
+    border-color: $accent-color;
+    background-color: $accent-color;
+    background-image: url(./../image/icon-check.svg);
+    background-size: contain;
+    background-position: center;
+    background-origin: border-box;
 }
 
 .btn-send {
@@ -191,36 +210,35 @@
     font-size: 16px;
     line-height: 1.875;
     letter-spacing: 0.06em;
-    color: $title-color-white;
+    color: #fff;
     background-color: #2195f3;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
+    
     &:hover,
     &:focus {
-        background-color: #188CE8;
+    background-color: #188CE8;
     }
 }
+
 
 .close {
     position: absolute;
     top: 8px;
     right: 8px;
-    @include centredFlex();
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 30px;
     height: 30px;
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
     color: $title-color-white;
-
+    
     &:hover,
     &:focus {
         fill: #2196F3;
     }
 }
-
-
-
-
 
