--- a/css/main.css
+++ b/css/main.css
@@ -350,6 +350,7 @@ button {
     top: 100%;
     left: 0;
     border-top: 1px solid #ececec;
+    z-index: 10;
   }
   .menu-container.is-open {
     display: block;
