--- a/sass/studio/_header.scss
+++ b/sass/studio/_header.scss
@@ -65,6 +65,7 @@
         top: 100%;
         left: 0;
         border-top: 1px solid #ececec;
+        z-index: 10;
 
         &.is-open {
             display: block;
