--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -47,6 +47,12 @@ button {
     cursor: pointer;
 }
 
+img { 
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
 .visually-hidden {
     position: absolute;
     width: 1px;
