--- a/sass/studio/_our-works.scss
+++ b/sass/studio/_our-works.scss
@@ -1,7 +1,7 @@
 /* Чем мы занимаемся */
 
 .work-exemple {
-    @extend %container-padding;
+    padding-bottom: 94px;
 
      @media screen and (max-width: 1199px) {
             display: none;          
