--- a/sass/studio/_hero.scss
+++ b/sass/studio/_hero.scss
@@ -8,7 +8,7 @@
     margin-right: auto;
     background-color: #2F303A;
     background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../image/background/background-mobile.jpg);
+    url(..//..//image/background/background-mobile.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -26,7 +26,7 @@
 screen and (min-resolution: 192dpi),
 screen and (min-resolution: 2dppx) {
     .hero {
-        background-image: url(../../image/background/background-mobile@2x.jpg);
+        background-image: url(..//..//image/background/background-mobile@2x.jpg);
     }
 }
 
@@ -40,7 +40,7 @@ screen and (min-resolution: 288dpi) {
 
 @media screen and (min-width: 768px) {
     .hero {
-        background-image: url(../../image/background/background-tablet.jpg);
+        background-image: url(..//..//image/background/background-tablet.jpg);
     }
 
     @media screen and (min-device-pixel-ratio: 2),
