--- a/sass/studio/_our-team.scss
+++ b/sass/studio/_our-team.scss
@@ -34,7 +34,7 @@
         }
     }
 
-    @media screen and (min-width: 480px) {
+    @media screen and (max-width: 767px) {
         max-width: 450px;
     }
 
